--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesList.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesList.mxml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-		xmlns:mx="library://ns.adobe.com/flex/mx"
-		xmlns:s="library://ns.adobe.com/flex/spark"
-		height="100%">
+		  xmlns:mx="library://ns.adobe.com/flex/mx"
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  height="100%">
 
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.resourceBrowser.view.skins.ResourcesListSkin;
-			
-			protected function nameFilter_focusInHandler(event:FocusEvent):void
+
+			protected function nameFilter_focusInHandler( event : FocusEvent ) : void
 			{
 				// TODO Auto-generated method stub
-				if ( nameFilter.text == resourceManager.getString( 'ResourceBrowser_General', 'list_filter' )  )
+				if ( nameFilter.text == resourceManager.getString( 'ResourceBrowser_General', 'list_filter' ) )
 					nameFilter.text = "";
 			}
-			
 		]]>
 	</fx:Script>
-	
-	<s:TextInput id="nameFilter" width="100%" 
+
+	<s:TextInput id="nameFilter"
+				 width="100%"
 				 text="{resourceManager.getString( 'ResourceBrowser_General', 'list_filter' ) }"
 				 focusIn="nameFilter_focusInHandler(event)"/>
-	
-	<s:List id="resources" labelField="name" height="100%"
+
+	<s:List id="resources"
+			labelField="name"
+			height="100%"
 			skinClass="net.vdombox.ide.modules.resourceBrowser.view.skins.ResourcesListSkin"
-			itemRenderer="net.vdombox.ide.modules.resourceBrowser.view.components.ResourcesListItemRenderer" useVirtualLayout="false" borderVisible="false"/>
+			itemRenderer="net.vdombox.ide.modules.resourceBrowser.view.components.ResourcesListItemRenderer"
+			useVirtualLayout="false"
+			borderVisible="false"/>
 
 </s:VGroup>
