--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesLoader.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesLoader.mxml
@@ -9,12 +9,12 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
-			
+
 			import net.vdombox.ide.common.model._vo.ResourceVO;
 			import net.vdombox.ide.modules.resourceBrowser.events.ResourcesLoaderEvent;
 			import net.vdombox.ide.modules.resourceBrowser.events.ResourcesLoaderItemRendererEvent;
 			import net.vdombox.ide.modules.resourceBrowser.view.skins.ResourceLoaderListSkin;
-			
+
 			import spark.events.RendererExistenceEvent;
 			import spark.filters.DropShadowFilter;
 
@@ -47,7 +47,7 @@
 						uploadGroup.enabled = true;
 					}
 
-//					if( resourceList.height )
+						//					if( resourceList.height )
 				}
 
 				super.commitProperties();
@@ -71,7 +71,7 @@
 			private function itemRenderer_removeHandler( event : ResourcesLoaderItemRendererEvent ) : void
 			{
 				var itemRenderer : ResourceItemRenderer = event.target as ResourceItemRenderer;
-				
+
 				if ( itemRenderer && itemRenderer.data is ResourceVO )
 				{
 					var resourceVO : ResourceVO = itemRenderer.data as ResourceVO;
@@ -90,65 +90,98 @@
 
 	<s:Scroller id="scroller"
 				width="100%"
-				bottom="40" top="0">
+				bottom="40"
+				top="0">
 		<s:Group width="100%"
 				 filters="{[new DropShadowFilter(5)]}">
 
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:Rect bottom="0"
+					left="0"
+					right="0"
+					top="0">
 				<s:fill>
 					<s:SolidColor color="gray"/>
 				</s:fill>
 			</s:Rect>
 
 			<s:List id="resourceList"
-					dataProvider="{ resourcesArrayList }" height="25"
-					bottom="5" left="5" right="5" skinClass="net.vdombox.ide.modules.resourceBrowser.view.skins.ResourceLoaderListSkin"
+					dataProvider="{ resourcesArrayList }"
+					height="25"
+					bottom="5"
+					left="5"
+					right="5"
+					skinClass="net.vdombox.ide.modules.resourceBrowser.view.skins.ResourceLoaderListSkin"
 					top="5"
-					contentBackgroundAlpha="0" useVirtualLayout="false" borderVisible="false" itemRenderer="net.vdombox.ide.modules.resourceBrowser.view.components.ResourceItemRenderer"
-					rendererAdd="resourceList_rendererAddHandler(event)" rendererRemove="resourceList_rendererRemoveHandler(event)"/>
+					contentBackgroundAlpha="0"
+					useVirtualLayout="false"
+					borderVisible="false"
+					itemRenderer="net.vdombox.ide.modules.resourceBrowser.view.components.ResourceItemRenderer"
+					rendererAdd="resourceList_rendererAddHandler(event)"
+					rendererRemove="resourceList_rendererRemoveHandler(event)"/>
 
 		</s:Group>
 	</s:Scroller>
 
-	<s:Group height="40" width="100%"
+	<s:Group height="40"
+			 width="100%"
 			 bottom="0">
 
 		<s:Group id="uploadGroup"
-				 enabled="false" height="30"
+				 enabled="false"
+				 height="30"
 				 top="5"
 				 click="uploadGroup_clickHandler()"
-				 filters="{[new DropShadowFilter(5)]}" buttonMode="true">
+				 filters="{[new DropShadowFilter(5)]}"
+				 buttonMode="true">
 
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:Rect bottom="0"
+					left="0"
+					right="0"
+					top="0">
 				<s:fill>
 					<s:SolidColor color="gray"/>
 				</s:fill>
 			</s:Rect>
 
 			<s:HGroup width="100%"
-					  paddingLeft="10" paddingRight="10" verticalAlign="middle" verticalCenter="0"
-					  gap="10" buttonMode="true">
+					  paddingLeft="10"
+					  paddingRight="10"
+					  verticalAlign="middle"
+					  verticalCenter="0"
+					  gap="10"
+					  buttonMode="true">
 
 				<s:Label id="loadResourceLabel"
-						 text="Upload Resources" width="100%"
-						 color="white" fontFamily="Verdana" fontWeight="bold" textDecoration="none"
+						 text="Upload Resources"
+						 width="100%"
+						 color="white"
+						 fontFamily="Verdana"
+						 fontWeight="bold"
+						 textDecoration="none"
 						 maxDisplayedLines="1"/>
 			</s:HGroup>
 		</s:Group>
 
 		<s:Group id="addResourcesGroup"
-				 height="30" width="45"
+				 height="30"
+				 width="45"
 				 right="10"
 				 filters="{[new DropShadowFilter(5)]}">
 
-			<s:Rect bottom="0" left="0" right="0" top="0">
+			<s:Rect bottom="0"
+					left="0"
+					right="0"
+					top="0">
 				<s:fill>
 					<s:SolidColor color="gray"/>
 				</s:fill>
 			</s:Rect>
 
-			<mx:Image height="20" source="@Embed('assets/add_resource.png')" width="20"
-					  horizontalCenter="0" verticalCenter="0"
+			<mx:Image height="20"
+					  source="@Embed('assets/add_resource.png')"
+					  width="20"
+					  horizontalCenter="0"
+					  verticalCenter="0"
 					  buttonMode="true"/>
 		</s:Group>
 	</s:Group>
