--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/skins/IconButtonSkin.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/skins/IconButtonSkin.mxml
@@ -2,7 +2,8 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minHeight="10" minWidth="10"
+			 minHeight="10"
+			 minWidth="10"
 			 alpha.disabled="0.5">
 	<!-- host component -->
 
@@ -17,8 +18,10 @@
 
 	<fx:Script>
 		<![CDATA[
-			/* Define the skin elements that should not be colorized.
-			 For button, the graphics are colorized but the label is not. */
+			/*
+			   Define the skin elements that should not be colorized.
+			   For button, the graphics are colorized but the label is not.
+			 */
 			static private const exclusions : Array = [ "labelDisplay" ];
 
 			/**
@@ -30,7 +33,7 @@
 			}
 
 			/**
-			 *  @private
+			 * @private
 			 */
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
@@ -56,41 +59,64 @@
 	</s:states>
 	<!-- layer 1: shadow -->
 
-	<s:Rect bottom="-1" left="-1" right="-1" top="-1"
+	<s:Rect bottom="-1"
+			left="-1"
+			right="-1"
+			top="-1"
 			radiusX="{cornerRadius}">
 
 		<s:fill>
 
 			<s:LinearGradient rotation="90">
 
-				<s:GradientEntry color="0x000000" color.down="0xFFFFFF"
-								 alpha="0.01" alpha.down="0"/>
+				<s:GradientEntry color="0x000000"
+								 color.down="0xFFFFFF"
+								 alpha="0.01"
+								 alpha.down="0"/>
 
-				<s:GradientEntry color="0x000000" color.down="0xFFFFFF"
-								 alpha="0.07" alpha.down="0.5"/>
+				<s:GradientEntry color="0x000000"
+								 color.down="0xFFFFFF"
+								 alpha="0.07"
+								 alpha.down="0.5"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	<!-- layer 2: fill -->
 
-	<s:Rect bottom="0" left="0" right="0" top="0"
+	<s:Rect bottom="0"
+			left="0"
+			right="0"
+			top="0"
 			radiusX="{cornerRadius}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xEAEAE8" color.down="0xAAAAAA" color.over="0xBBBDBD"/>
-				<s:GradientEntry color="0xCCCCCC" color.down="0x929496" color.over="0x9FA0A1"/>
+				<s:GradientEntry color="0xEAEAE8"
+								 color.down="0xAAAAAA"
+								 color.over="0xBBBDBD"/>
+				<s:GradientEntry color="0xCCCCCC"
+								 color.down="0x929496"
+								 color.over="0x9FA0A1"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 
-	<s:Group bottom="0" left="0" right="0" top="0">
+	<s:Group bottom="0"
+			 left="0"
+			 right="0"
+			 top="0">
 
 		<mx:Image id="buttonIcon"
-				  height="11" source="{ hostComponent.icon }" width="11"
-				  left="5" verticalCenter="0"/>
+				  height="11"
+				  source="{ hostComponent.icon }"
+				  width="11"
+				  left="5"
+				  verticalCenter="0"/>
 
 		<s:Label id="labelDisplay"
-				 left="21" right="5" textAlign="left" verticalCenter="2"
+				 left="21"
+				 right="5"
+				 textAlign="left"
+				 verticalCenter="2"
 				 maxDisplayedLines="1"/>
 	</s:Group>
 </s:SparkSkin>
